--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,33 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.prose h1 {
+  font-size: 2.2rem;
+  /* font-weight: 700; */
+}
+
+.prose h3 {
+  font-size: 2.5rem;
+}
+
+.prose p {
+font-size: 1rem;
+padding-left: 20px;
+}
+
+.prose ul li::marker {
+ font-size: 1rem;
+}
+.prose h2{
+  font-size: 1.5rem;
+  font-weight: 600;
+  padding-top:10px;
+  padding-left: 20px;
+}
+.prose span{
+  font-size: 1rem;
+   padding-top:10px;
+  padding-left: 30px;
+}
+
